# autoopt

./: .bandit  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  Pipfile  README.md  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  codeql-analysis.yml  push.yml  python_package.yml
autoopt/distributions/: __init__.py  base.py  choice.py  lognormal.py  loguniform.py  normal.py  uniform.py
autoopt/pipelines/: __init__.py  node.py  pipeline.py
autoopt/tasks/: __init__.py  base_task.py
fixtures/: setup.py
fixtures/autoopt_test_fixture/: node_test.py
tests/distributions/: test_base.py  test_choice.py  test_lognormal.py  test_loguniform.py  test_normal.py  test_q_mixin.py  test_qlognormal.py  test_qnormal.py  test_uniform.py
tests/pipelines/: test_node.py  test_pipeline.py  utils.py
tests/tasks/: test_base_task.py
