[build-system]
requires = ["poetry_core >= 1.0.0", "poetry-dynamic-versioning-plugin"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"


#####################
# PACKAGE DESCRIPTION
#
#####################
[tool.poetry]
name = "AutoOpt"
version = "0.0.1"
description = "Framework to automatically find and optimize the best processing pipeline for a given dataset"
license = "MIT"
authors = ["Torben Hansing"]
maintainers = ["Torben Hansing"]
readme = "README.md"
repository = "https://github.com/hansa064/autoopt"
keywords = ["AI", "Optimization", "Hyperopt"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
packages = [
    {include = "autoopt" },
]

[tool.poetry.urls]
Issues = "https://github.com/hansa064/autoopt/issues"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22"
matplotlib = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
pytest = "*"
coverage = {version = "*", extras = ["toml"]}

[tool.poetry.extras]
plotting = ["matplotlib"]


#######################
# TOOLING CONFIGURATION
#
#######################
[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310"]

[tool.pylint.'MESSAGES CONTROL']
disable=""",
    import-outside-toplevel,
    invalid-name,
"""

[tool.coverage.run]
source = ["autoopt"]
