[build-system]
requires = ["setuptools >= 42", "wheel", "setuptools-scm[toml] >= 3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "AutoOpt"
description = "Framework to automatically find and optimize the best processing pipeline for a given dataset"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Torben Hansing"}]
keywords = []
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = ["numpy"]
dynamic = ["version"]
requires-python = ">=3.7"

[project.urls]
homepage = "https://github.com/hansingt/autoopt"
repository = "https://github.com/hansingt/autoopt"
issues = "https://github.com/hansingt/autoopt/issues"

[project.optional-dependencies]
plotting = [
    "matplotlib",
]

[tool.setuptools]
packages = ["autoopt"]
platforms = ["any"]


[tool.setuptools_scm]

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310"]

[tool.pylint.'MESSAGES CONTROL']
disable=""",
    import-outside-toplevel,
    invalid-name,
"""

[tool.coverage.run]
source = ["autoopt"]
