[metadata]
name = AutoOpt
description = Framework to automatically find and optimize the best processing pipeline for a given dataset
author = Torben Hansing
url = https://github.com/hansa064/autoopt
project-urls =
    Source = https://github.com/hansa064/autoopt
    Tracker = https://github.com/hansa064/autoopt/issues
long-description = file:README.md
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = autoopt
setup_requires =
    setuptools >= 42
    setuptools_scm[toml] >= 3.4
    wheel
install_requires =
    numpy ~= 1.20
tests_require =
    pytest ~= 6.2

[options.extras_require]
plotting = matplotlib ~= 3.4

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
